[gd_scene load_steps=6 format=3 uid="uid://daro5x6n3pd26"]

[ext_resource type="Script" uid="uid://bcqb5hwnjbtob" path="res://Main.gd" id="1_wt50o"]
[ext_resource type="Script" uid="uid://dlj8a6vfplu57" path="res://addons/AdmobPlugin/Admob.gd" id="2_4x6et"]
[ext_resource type="Texture2D" uid="uid://cy0mnncxevupr" path="res://assets/admob-android.png" id="2_qti4s"]
[ext_resource type="Texture2D" uid="uid://b2myrgf8pkumi" path="res://assets/admob-ios.png" id="3_cm0pq"]
[ext_resource type="Script" uid="uid://2ku0kg8unwr1" path="res://addons/AdmobPlugin/InlineAdaptiveBanner.gd" id="4_fos0i"]

[node name="Main" type="Node"]
script = ExtResource("1_wt50o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 40

[node name="AndroidTextureRect" type="TextureRect" parent="CanvasLayer/MainContainer/VBoxContainer/TextureHBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
texture = ExtResource("2_qti4s")
expand_mode = 3
stretch_mode = 5

[node name="iOSTextureRect" type="TextureRect" parent="CanvasLayer/MainContainer/VBoxContainer/TextureHBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("3_cm0pq")
expand_mode = 3
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Admob Demo"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 11

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 165)
layout_mode = 2
current_tab = 0

[node name="Banner" type="VBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 4
metadata/_tab_index = 0

[node name="PositionHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/PositionHBoxContainer"]
layout_mode = 2
text = "Banner Position:"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/PositionHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SizeHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/SizeHBoxContainer"]
layout_mode = 2
text = "Banner Size:"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/SizeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CollapsiblePosHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/CollapsiblePosHBoxContainer"]
layout_mode = 2
text = "Collapsible Position:"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/CollapsiblePosHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadButtonHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="LoadBannerButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/LoadButtonHBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Load Banner Ad"

[node name="IDHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/IDHBoxContainer"]
layout_mode = 2
text = "ID:"

[node name="AdIdOptionButton" type="OptionButton" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/IDHBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ShowBannerButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
disabled = true
text = "Show"

[node name="HideBannerButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
disabled = true
text = "Hide"

[node name="SizeButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Get Size"

[node name="PixelSizeButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Get Size (px)"

[node name="RemoveBannerButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
disabled = true
text = "Remove"

[node name="InlineBanner" type="ScrollContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
horizontal_scroll_mode = 0
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/InlineBanner"]
layout_mode = 2

[node name="TopLabel" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/InlineBanner/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
autowrap_mode = 3

[node name="InlineAdaptiveBanner" type="Control" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/InlineBanner/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("4_fos0i")
max_ad_height = 300
admob_path = NodePath("../../../../../../../../Admob")
auto_load = true

[node name="BottomLabel" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/InlineBanner/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
autowrap_mode = 3

[node name="Other" type="VBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15
metadata/_tab_index = 2

[node name="InterstitialHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="InterstitialButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/InterstitialHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Show Interstitial Ad"

[node name="ReloadInterstitialButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/InterstitialHBoxContainer"]
layout_mode = 2
disabled = true
text = "Reload"

[node name="RewardedHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RewardedButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/RewardedHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Show Rewarded Ad"

[node name="ReloadRewardedButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/RewardedHBoxContainer"]
layout_mode = 2
disabled = true
text = "Reload"

[node name="RewardedInterstitialHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RewardedInterstitialButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/RewardedInterstitialHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Show Rewarded Interstitial Ad"

[node name="ReloadRewardedInterstitialButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/RewardedInterstitialHBoxContainer"]
layout_mode = 2
disabled = true
text = "Reload"

[node name="Consent" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 2
text = "CONSENT INFO"
horizontal_alignment = 1

[node name="StatusHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeadingLabel" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer/StatusHBoxContainer"]
layout_mode = 2
text = "Status:"

[node name="ValueLabel" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer/StatusHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer"]
layout_mode = 2

[node name="UpdateConsentInfoButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer/ButtonsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Update"

[node name="ResetConsentButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer/ButtonsHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 14
scroll_following = true

[node name="Admob" type="Node" parent="."]
script = ExtResource("2_4x6et")
auto_show_on_resume = true
android_debug_application_id = "ca-app-pub-3940256099942544~3347511713"
ios_debug_application_id = "ca-app-pub-3940256099942544~1458002511"
debug_geography = 1
test_device_hashed_ids = Array[String](["91C505D5-7ACF-4EE8-9A1D-CD8DCDD21A1B"])

[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/LoadButtonHBoxContainer/LoadBannerButton" to="." method="_on_load_banner_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer/ShowBannerButton" to="." method="_on_show_banner_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer/HideBannerButton" to="." method="_on_hide_banner_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer/SizeButton" to="." method="_on_size_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer/PixelSizeButton" to="." method="_on_pixel_size_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Banner/ButtonsHBoxContainer/RemoveBannerButton" to="." method="_on_remove_banner_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/InterstitialHBoxContainer/InterstitialButton" to="." method="_on_interstitial_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/InterstitialHBoxContainer/ReloadInterstitialButton" to="." method="_on_reload_interstitial_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/RewardedHBoxContainer/RewardedButton" to="." method="_on_rewarded_video_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/RewardedHBoxContainer/ReloadRewardedButton" to="." method="_on_reload_rewarded_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/RewardedInterstitialHBoxContainer/RewardedInterstitialButton" to="." method="_on_rewarded_interstitial_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Other/RewardedInterstitialHBoxContainer/ReloadRewardedInterstitialButton" to="." method="_on_reload_rewarded_interstitial_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer/ButtonsHBoxContainer/UpdateConsentInfoButton" to="." method="_on_update_consent_info_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/VBoxContainer/VBoxContainer/TabContainer/Consent/VBoxContainer/ButtonsHBoxContainer/ResetConsentButton" to="." method="_on_reset_consent_button_pressed"]
[connection signal="app_open_ad_dismissed_full_screen_content" from="Admob" to="." method="_on_admob_app_open_ad_dismissed_full_screen_content"]
[connection signal="app_open_ad_failed_to_load" from="Admob" to="." method="_on_admob_app_open_ad_failed_to_load"]
[connection signal="app_open_ad_failed_to_show_full_screen_content" from="Admob" to="." method="_on_admob_app_open_ad_failed_to_show_full_screen_content"]
[connection signal="app_open_ad_impression" from="Admob" to="." method="_on_admob_app_open_ad_impression"]
[connection signal="app_open_ad_loaded" from="Admob" to="." method="_on_admob_app_open_ad_loaded"]
[connection signal="app_open_ad_showed_full_screen_content" from="Admob" to="." method="_on_admob_app_open_ad_showed_full_screen_content"]
[connection signal="banner_ad_failed_to_load" from="Admob" to="." method="_on_admob_banner_ad_failed_to_load"]
[connection signal="banner_ad_loaded" from="Admob" to="." method="_on_admob_banner_ad_loaded"]
[connection signal="banner_ad_refreshed" from="Admob" to="." method="_on_admob_banner_ad_refreshed"]
[connection signal="consent_form_dismissed" from="Admob" to="." method="_on_admob_consent_form_dismissed"]
[connection signal="consent_form_failed_to_load" from="Admob" to="." method="_on_admob_consent_form_failed_to_load"]
[connection signal="consent_form_loaded" from="Admob" to="." method="_on_admob_consent_form_loaded"]
[connection signal="consent_info_update_failed" from="Admob" to="." method="_on_admob_consent_info_update_failed"]
[connection signal="consent_info_updated" from="Admob" to="." method="_on_admob_consent_info_updated"]
[connection signal="initialization_completed" from="Admob" to="." method="_on_admob_initialization_completed"]
[connection signal="interstitial_ad_dismissed_full_screen_content" from="Admob" to="." method="_on_admob_interstitial_ad_dismissed_full_screen_content"]
[connection signal="interstitial_ad_failed_to_load" from="Admob" to="." method="_on_admob_interstitial_ad_failed_to_load"]
[connection signal="interstitial_ad_loaded" from="Admob" to="." method="_on_admob_interstitial_ad_loaded"]
[connection signal="interstitial_ad_refreshed" from="Admob" to="." method="_on_admob_interstitial_ad_refreshed"]
[connection signal="rewarded_ad_failed_to_load" from="Admob" to="." method="_on_admob_rewarded_ad_failed_to_load"]
[connection signal="rewarded_ad_loaded" from="Admob" to="." method="_on_admob_rewarded_ad_loaded"]
[connection signal="rewarded_ad_user_earned_reward" from="Admob" to="." method="_on_admob_rewarded_ad_user_earned_reward"]
[connection signal="rewarded_interstitial_ad_failed_to_load" from="Admob" to="." method="_on_admob_rewarded_interstitial_ad_failed_to_load"]
[connection signal="rewarded_interstitial_ad_loaded" from="Admob" to="." method="_on_admob_rewarded_interstitial_ad_loaded"]
[connection signal="rewarded_interstitial_ad_user_earned_reward" from="Admob" to="." method="_on_admob_rewarded_interstitial_ad_user_earned_reward"]
